# LLM-Benchmark-ABAP-Code-Generation

./: .env.example  .gitignore  CITATION.cff  LICENSE  README.md  abap_interaction.py  analyse_results.py  generate_kiski_answers.py  generate_llm_answers.py  generate_llm_answers_batch_anthropic.py  generate_llm_answers_batch_openai.py  generate_llm_answers_parallel.py  llama-3.3-70b-instruct.json  main.py  pyproject.toml
abap_canonical_solution/: z_humaneval_034.abap  z_humaneval_035.abap  z_humaneval_087.abap  z_humaneval_111.abap
abap_unittests/: z_humaneval_034_test.abap  z_humaneval_035_test.abap  z_humaneval_087_test.abap  z_humaneval_111_test.abap
analyse_results/: results.json  syntax_errors.json
analysis/: build_publish_assets.py  consolidate_results.py  generate_leaderboard.py  generate_syntax_errors.py  kaplan_meier_survival_curves.py  km_analysis.py  km_analysis_abap.py  plot_error_types_distribution.py  plot_failed_tasks_intersection.py  plot_style.py  plot_success_by_category.py  plot_success_by_round.py  plot_syntax_error_patterns.py  success_distribution.py
data/: README.md  anthropic_batch_tracking.json  claude-opus-4-5-20251101_batch_response.jsonl  claude-opus-4-5-20251101_retry_state.json  claude-opus-4-5-20251101_tiers.json  gpt-5.2_batch_response.jsonl  gpt-5.2_tiers.json  model_leaderboard.csv  openai_batch_tracking.json  sap-abap-1_tiers.json  smoke_test_batch.jsonl
dataset/: README.md
docs/: ABAP_1_BTP_SETUP.md
src/: abap1_orchestration.py  abap_interaction.py  abap_test.py  abaplint_check.py  batch_status.py  chat_state.py  llms.py  (+10 more)
(+13 files in other folders)
